--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  color: white;
 }
+
+body {
+  text-align: center;
+  position: relative;
+  min-height: 100vh;
+  background-image: url('./assets/miku-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  opacity: 0;
+}
+
+.keyboard-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.audio-container {
+  display: none;
+}
+
+.key {
+  width: 90px;
+  height: 90px;
+  border: solid 3px rgb(17, 206, 206);
+  border-radius: 3px;
+  padding: 5px;
+  margin: 10px;
+  background: rgb(0, 0, 0, 0.7);
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+  transition: all 0.1s;
+}
+
+.key:hover {
+  transform: scale(1.1);
+}
+
+kbd {
+  font-size: 2rem;
+}
+
+.playing {
+  transform: scale(1.1);
+  border: solid 5px rgb(204, 240, 5);
+}
+
+/* @media screen and (max-width: 965px) {
+  .keyboard-container {
+  }
+} */
